--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -1,5 +1,5 @@
 service:
-  name: serverless-todo-app
+  name: narrate-books-app
 
 plugins:
   - serverless-webpack
@@ -18,9 +18,9 @@ provider:
   region: ${opt:region, 'us-east-1'}
 
   environment:
-    TODO_TABLE: todos-table-${self:provider.stage}
-    USER_ID_INDEX: todos-table-user-index-${self:provider.stage}
-    IMAGES_S3_BUCKET: todo-app-images-bucket-${self:provider.stage}-193123xdka
+    BOOK_TABLE: books-table-${self:provider.stage}
+    USER_ID_INDEX: books-table-user-index-${self:provider.stage}
+    IMAGES_S3_BUCKET: book-app-images-bucket-${self:provider.stage}-193123xdka
     URL_EXPIRATION: 300
 
   tracing:
@@ -32,104 +32,104 @@ custom:
     api:
       info:
         version: v1.0.0
-        title: Todo API
-        description: Todo Application with image sharing
+        title: Book API
+        description: Book Application with image sharing
     models:
-      - name: CreateToDoReq
+      - name: CreateBookReq
         contentType: application/json
-        schema: ${file(src/models/create-todo-request.json)}
-      - name: UpdateToDoReq
+        schema: ${file(src/models/create-book-request.json)}
+      - name: UpdateBookReq
         contentType: application/json
-        schema: ${file(src/models/update-todo-request.json)}
+        schema: ${file(src/models/update-book-request.json)}
 
 functions:
   Auth:
     handler: src/lambda/auth/auth0Authorizer.handler
 
-  GetTodos:
-    handler: src/lambda/http/getTodos.handler
+  GetBooks:
+    handler: src/lambda/http/getBooks.handler
     events:
       - http:
           method: get
-          path: todos
+          path: books
           authorizer: Auth
           cors: true
     iamRoleStatements:
       - Effect: Allow
         Action:
           - dynamodb:Query
-        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODO_TABLE}/index/${self:provider.environment.USER_ID_INDEX}
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.BOOK_TABLE}/index/${self:provider.environment.USER_ID_INDEX}
       - Effect: Allow
         Action:
           - xray:PutTraceSegments
           - xray:PutTelemetryRecords
         Resource: "*"
 
-  CreateTodo:
-    handler: src/lambda/http/createTodo.handler
+  CreateBook:
+    handler: src/lambda/http/createBook.handler
     events:
       - http:
           method: post
-          path: todos
+          path: books
           authorizer: Auth
           cors: true
           reqValidatorName: RequestBodyValidator
           documentation:
-            summary: Create a new todo
-            description: Create a new todo
+            summary: Create a new book
+            description: Create a new books
             requestModels:
-              'application/json': CreateToDoReq
+              'application/json': CreateBookReq
 
     iamRoleStatements:
       - Effect: Allow
         Action:
           - dynamodb:PutItem
-        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODO_TABLE}
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.BOOK_TABLE}
       - Effect: Allow
         Action:
           - xray:PutTraceSegments
           - xray:PutTelemetryRecords
         Resource: "*"
 
-  UpdateTodo:
-    handler: src/lambda/http/updateTodo.handler
+  UpdateBook:
+    handler: src/lambda/http/updateBook.handler
     events:
       - http:
           method: patch
-          path: todos/{todoId}
+          path: books/{bookId}
           authorizer: Auth
           cors: true
           reqValidatorName: RequestBodyValidator
           documentation:
-            summary: Update a todo
-            description: Update a todo
+            summary: Update a book
+            description: Update a book
             requestModels:
-              'application/json': UpdateToDoReq
+              'application/json': UpdateBookReq
 
     iamRoleStatements:
       - Effect: Allow
         Action:
           - dynamodb:UpdateItem
-        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODO_TABLE}
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.BOOK_TABLE}
       - Effect: Allow
         Action:
           - xray:PutTraceSegments
           - xray:PutTelemetryRecords
         Resource: "*"
 
-  DeleteTodo:
-    handler: src/lambda/http/deleteTodo.handler
+  DeleteBook:
+    handler: src/lambda/http/deleteBook.handler
     events:
       - http:
           method: delete
-          path: todos/{todoId}
+          path: books/{bookId}
           authorizer: Auth
           cors: true
     iamRoleStatements:     
       - Effect: Allow
         Action:
           - dynamodb:DeleteItem
-        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODO_TABLE}
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.BOOK_TABLE}
       - Effect: Allow
         Action:
           - xray:PutTraceSegments
@@ -141,14 +141,14 @@ functions:
     events:
       - http:
           method: post
-          path: todos/{todoId}/attachment
+          path: books/{bookId}/attachment
           authorizer: Auth
           cors: true
     iamRoleStatements:
       - Effect: Allow
         Action:
           - dynamodb:UpdateItem
-        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODO_TABLE}
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.BOOK_TABLE}
       - Effect: Allow
         Action:
           - s3:PutObject
@@ -181,23 +181,23 @@ resources:
         ValidateRequestBody: true
         ValidateRequestParameters: false
 
-    TodoDynamoDBTable:
+    BookDynamoDBTable:
       Type: "AWS::DynamoDB::Table"
       Properties:
         AttributeDefinitions:
-          - AttributeName: todoId
+          - AttributeName: bookId
             AttributeType: S
           - AttributeName: userId
             AttributeType: S
         KeySchema:
-          - AttributeName: todoId
+          - AttributeName: bookId
             KeyType: HASH
           - AttributeName: userId
             KeyType: RANGE
         BillingMode: PAY_PER_REQUEST
         StreamSpecification:
           StreamViewType: NEW_IMAGE
-        TableName: ${self:provider.environment.TODO_TABLE}
+        TableName: ${self:provider.environment.BOOK_TABLE}
         GlobalSecondaryIndexes:
           - IndexName: ${self:provider.environment.USER_ID_INDEX}
             KeySchema:
