--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-star-rating-component": "^1.4.0",
     "axios": "^0.18.1",
     "dateformat": "^3.0.3",
     "immutability-helper": "^3.0.1",
@@ -10,6 +11,7 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "2.1.8",
+    "react-star-rating-component": "^1.4.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.86.0",
     "styled-components": "^4.3.2"
