--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-star-rating-component": "^1.4.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.86.0",
+    "serverless-finch": "^2.6.0",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
