--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -21,6 +21,7 @@ provider:
     BOOK_TABLE: books-table-${self:provider.stage}
     USER_ID_INDEX: books-table-user-index-${self:provider.stage}
     IMAGES_S3_BUCKET: book-app-images-bucket-${self:provider.stage}-193123xdka
+    GOODREAD_LIBRARY_S3_BUCKET: book-app-goodreads-bucket-${self:provider.stage}
     URL_EXPIRATION: 300
 
   tracing:
@@ -136,23 +137,42 @@ functions:
           - xray:PutTelemetryRecords
         Resource: "*"
 
-  GenerateUploadUrl:
-    handler: src/lambda/http/generateUploadUrl.handler
+  # GenerateUploadUrl:
+  #   handler: src/lambda/http/generateUploadUrl.handler
+  #   events:
+  #     - http:
+  #         method: post
+  #         path: books/{bookId}/attachment
+  #         authorizer: Auth
+  #         cors: true
+  #   iamRoleStatements:
+  #     - Effect: Allow
+  #       Action:
+  #         - dynamodb:UpdateItem
+  #       Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.BOOK_TABLE}
+  #     - Effect: Allow
+  #       Action:
+  #         - s3:PutObject
+  #       Resource: "arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*"
+  #     - Effect: Allow
+  #       Action:
+  #         - xray:PutTraceSegments
+  #         - xray:PutTelemetryRecords
+  #       Resource: "*"
+
+  GenUploadLibUrl:
+    handler: src/lambda/http/generateUploadLibraryUrl.handler
     events:
       - http:
           method: post
-          path: books/{bookId}/attachment
+          path: books/library/attachment
           authorizer: Auth
           cors: true
     iamRoleStatements:
       - Effect: Allow
         Action:
-          - dynamodb:UpdateItem
-        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.BOOK_TABLE}
-      - Effect: Allow
-        Action:
           - s3:PutObject
-        Resource: "arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*"
+        Resource: "arn:aws:s3:::${self:provider.environment.GOODREAD_LIBRARY_S3_BUCKET}/*"
       - Effect: Allow
         Action:
           - xray:PutTraceSegments
@@ -238,3 +258,37 @@ resources:
               Action: 's3:GetObject'
               Resource: 'arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*'
         Bucket: !Ref AttachmentsBucket
+
+
+    LibraryAttachmentsBucket:
+      Type: AWS::S3::Bucket
+      Properties:
+        BucketName: ${self:provider.environment.GOODREAD_LIBRARY_S3_BUCKET}
+        CorsConfiguration:
+          CorsRules:
+            -
+              AllowedOrigins:
+                - '*'
+              AllowedHeaders:
+                - '*'
+              AllowedMethods:
+                - GET
+                - PUT
+                - POST
+                - DELETE
+                - HEAD
+              MaxAge: 3000              
+
+    # GoodreadsBucketPolicy:
+    #   Type: AWS::S3::BucketPolicy
+    #   Properties:
+    #     PolicyDocument:
+    #       Id: MyPolicy
+    #       Version: "2012-10-17"
+    #       Statement:
+    #         - Sid: PublicReadForGetBucketObjects
+    #           Effect: Allow
+    #           Principal: '*'
+    #           Action: 's3:GetObject'
+    #           Resource: 'arn:aws:s3:::${self:provider.environment.GOODREAD_LIBRARY_S3_BUCKET}/*'
+    #     Bucket: !Ref LibraryAttachmentsBucket
