--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "@types/http-errors": "^1.6.1",
     "aws-xray-sdk": "^2.2.0",
     "axios": "^0.19.0",
+    "csv-parse": "^4.12.0",
     "http-errors": "^1.7.2",
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^1.9.0",
