--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -23,12 +23,13 @@ provider:
     IMAGES_S3_BUCKET: book-app-images-bucket-${self:provider.stage}-193123xdka
     GOODREAD_LIBRARY_S3_BUCKET: book-app-goodreads-bucket-${self:provider.stage}
     URL_EXPIRATION: 300
-
+    
   tracing:
     lambda: true
     apiGateway: true
 
 custom:
+  libraryImportTopic: libraryImport-${self:provider.stage}
   documentation:
     api:
       info:
@@ -131,6 +132,37 @@ functions:
         Action:
           - dynamodb:DeleteItem
         Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.BOOK_TABLE}
+      - Effect: Allow
+        Action:
+          - xray:PutTraceSegments
+          - xray:PutTelemetryRecords
+        Resource: "*"
+
+  ImportLibrary:
+    handler: src/lambda/s3/importLibrary.handler
+    events:
+      - sns:
+          arn:
+            Fn::Join:
+              - ':'
+              - - arn:aws:sns
+                - Ref: AWS::Region
+                - Ref: AWS::AccountId
+                - ${self:custom.libraryImportTopic}
+          topicName: ${self:custom.libraryImportTopic}
+    iamRoleStatements:     
+      - Effect: Allow
+        Action:
+          - dynamodb:PutItem
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.BOOK_TABLE}
+      - Effect: Allow
+        Action:
+          - s3:GetObject
+        Resource: "arn:aws:s3:::${self:provider.environment.GOODREAD_LIBRARY_S3_BUCKET}/*"
+      - Effect: Allow
+        Action:
+          - s3:ListBucket
+        Resource: "arn:aws:s3:::${self:provider.environment.GOODREAD_LIBRARY_S3_BUCKET}"
       - Effect: Allow
         Action:
           - xray:PutTraceSegments
@@ -264,6 +296,10 @@ resources:
       Type: AWS::S3::Bucket
       Properties:
         BucketName: ${self:provider.environment.GOODREAD_LIBRARY_S3_BUCKET}
+        NotificationConfiguration:
+          TopicConfigurations:
+            - Event: s3:ObjectCreated:Put
+              Topic: !Ref LibraryImportTopic
         CorsConfiguration:
           CorsRules:
             -
@@ -278,6 +314,45 @@ resources:
                 - DELETE
                 - HEAD
               MaxAge: 3000              
+
+    # LibraryBucketPolicy:
+    #   Type: AWS::S3::BucketPolicy
+    #   Properties:
+    #     PolicyDocument:
+    #       Id: MyPolicy
+    #       Version: "2012-10-17"
+    #       Statement:
+    #         - Sid: PublicReadForGetBucketObjects
+    #           Effect: Allow
+    #           Principal: '*'
+    #           Action: 's3:GetObject'
+    #           Resource: 'arn:aws:s3:::${self:provider.environment.GOODREAD_LIBRARY_S3_BUCKET}/*'
+    #     Bucket: !Ref LibraryAttachmentsBucket
+
+        
+    SNSTopicPolicy:
+      Type: AWS::SNS::TopicPolicy
+      Properties:
+        PolicyDocument:
+          Version: "2012-10-17"
+          Statement:
+            - Effect: Allow
+              Principal:
+                AWS: "*"
+              Action: sns:Publish
+              Resource:
+                !Ref LibraryImportTopic
+              Condition:
+                ArnLike:
+                  AWS:SourceArn: arn:aws:s3:::${self:provider.environment.GOODREAD_LIBRARY_S3_BUCKET}
+        Topics:
+          - !Ref LibraryImportTopic
+
+    LibraryImportTopic:
+      Type: AWS::SNS::Topic
+      Properties:
+        DisplayName: Goodread Import topic
+        TopicName: ${self:custom.libraryImportTopic}
 
     # GoodreadsBucketPolicy:
     #   Type: AWS::S3::BucketPolicy
